--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>+Ambiente</title>
+    <title>Dashboard | +Ambiente</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="dist/css/main.css">
@@ -15,11 +15,13 @@
 
 </head>
 <body>
-
-    <div class="appContent">
-        <h1>+Ambiente</h1>
-    </div>
     
+    <nav class="navbar-default">
+        <div class="container">
+            <h1>+Ambiente</h1>
+        </div>
+    </nav>
+
     <form id="chat">
         <div class="header">Entre em contato</div>
         <div class="inputs">
@@ -39,5 +41,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
 
     <script src="dist/js/index.js"></script>
+
+
 </body>
 </html>
