--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,6 @@
     <!-- Socket IO -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
 
-    <script src="dist/js/index.js"></script>
+    <script src="dist/js/chat-connect.js"></script>
 </body>
 </html>
