--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>+Ambiente</title>
+    <title>Cadastre-Se | +Ambiente</title>
 
     <!-- CSS -->
     <link rel="stylesheet" href="dist/css/main.css">
@@ -16,12 +16,18 @@
 </head>
 <body>
 
-    <div id="appRoot" class="homeApp">
+    <div id="appRoot" class="signupApp">
         <h1>+Ambiente</h1>
-        <div class="btn-container">
-            <a href="/login" class="btn-default">Entrar</a>
-            <a href="" class="btn-default outline">Cadastre-se</a>
-        </div>
+        <form method="post">
+            <a href="/" class="back">Voltar</a>
+            <h3>Cadastre-se</h3>
+            <div class="input-group">
+                <input type="text" placeholder="Digite seu e-mail" required>
+                <input type="password" placeholder="Digite sua senha" required>
+            </div>
+            <button type="submit" class="btn-default">Entrar</button>
+            <a href="#" class="help">Esqueci minha senha</a>
+        </form>
     </div>
 
     <!-- Jquery -->
